--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-# Node dependencies
+# Node.js dependencies
 node_modules/
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+*.log
 
 # Runtime data
 pids
@@ -20,13 +17,16 @@ pids
 .env.test.local
 .env.production.local
 
-# Build output
+# Build artifacts
 dist/
 build/
 
-# OS-specific
+# OS-specific files
 .DS_Store
 Thumbs.db
+
+# Coverage reports
+coverage/
 
 # Optional: editor settings
 .vscode/
